Trying to add new buttons
I dont know if this dang thing is gonna work properly.

--- a/src/Prototype.html
+++ b/src/Prototype.html
@@ -7,6 +7,24 @@
 		<div id="stage">
 			<canvas></canvas>
 		</div>
+	<div id="stats">
+		<button id="sell">Sell</button>
+		<br>
+		<br>
+		<button id="buy">Buy</button>
+		<br>
+		<br>
+		<button id="eat">Eat</button>
+		<br>
+		<br>
+		<button id="potato">Potato</button>
+		<br>
+		<br>
+		<button id="tomato">Tomato</button>
+		<br>
+		<br>
+		<button id="carrot">Carrot</button>
+	</div>
 	</body>
 	<script src="Prototype.js"></script>
 </html>
