--- a/src/SideScroller.html
+++ b/src/SideScroller.html
@@ -8,5 +8,6 @@
 			<canvas></canvas>
 		</div>
 	</body>
+	<script src = "Prototype.js"></script>
 	<script src="SideScroller.js"></script>
 </html>
