--- a/src/Prototype.html
+++ b/src/Prototype.html
@@ -2,11 +2,14 @@
 	<head>
 		<title> BFG Prototype </title>
 		<link rel="stylesheet" type="text/css" href="Prototype.css">
+	
 	</head>
 	<body>
 		<div id="stage">
 			<canvas></canvas>
 		</div>
+		<script type="text/javascript" src="Prototype.js"></script>
 	</body>
-	<script src="Prototype.js"></script>
+	
+	
 </html>
